<resources>
    <string name="app_name">MusicalStructureApp</string>

    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="back"><![CDATA[<— BACK]]></string>
    <string name="artist_z_a">Artist Z-A</string>
    <string name="artist_a_z">Artist A-Z</string>
    <string name="title_z_a">Title Z-A</string>
    <string name="title_a_z">Title A-Z</string>
    <string name="fast_rewind">Fast rewind</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="fast_forward">Fast forward</string>
    <string name="music_note">Music note</string>
</resources>
