<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/mid_12"
    tools:context="com.example.android.musicalstructureapp.SongInfo">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@color/colorAccentLight"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="2">

        <TextView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/previous"
            android:textColor="@color/colorAccentLight"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_music_note_black"
            android:contentDescription="@string/music_note" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/next"
            android:textColor="@color/colorAccentLight"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/sm_8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp"
            tools:text="artist" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            tools:text="title" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:src="@drawable/ic_fast_rewind_black_24dp"
            style="@style/button_style"
            android:contentDescription="@string/fast_rewind" />

        <ImageButton
            android:src="@drawable/ic_pause_black_24dp"
            style="@style/button_style"
            android:contentDescription="@string/pause" />

        <ImageButton
            android:src="@drawable/ic_play_arrow_black_24dp"
            style="@style/button_style"
            android:contentDescription="@string/play" />

        <ImageButton
            android:src="@drawable/ic_fast_forward_black_24dp"
            style="@style/button_style"
            android:contentDescription="@string/fast_forward" />

    </LinearLayout>

</LinearLayout>
