<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructureapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_normal"
            style="@style/sort_tv_style"
            android:text="@string/title_a_z" />

        <View style="@style/view_style" />

        <TextView
            android:id="@+id/title_reverse"
            style="@style/sort_tv_style"
            android:text="@string/title_z_a" />

        <View style="@style/view_style" />

        <TextView
            android:id="@+id/artist_normal"
            style="@style/sort_tv_style"
            android:text="@string/artist_a_z" />

        <View style="@style/view_style" />

        <TextView
            android:id="@+id/artist_reverse"
            style="@style/sort_tv_style"
            android:text="@string/artist_z_a" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/colorPrimary" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
